still learning git...  updates...

--- a/turbinado.cabal
+++ b/turbinado.cabal
@@ -12,7 +12,7 @@ Executable server
   Main-is:             Turbinado/Server.hs
   Build-Depends:       base, bytestring, containers, directory, filepath, harp, hslogger, hsx, HTTP, mtl, network, old-locale, old-time, parsec, plugins, pretty, regex-compat, time
   Hs-Source-Dirs:      . , config
-  ghc-options: -F -pgmFtrhsx -O -DPRINTDEBUG 
+  ghc-options: -F -pgmFtrhsx -O 
   Extensions: MultiParamTypeClasses,
             FunctionalDependencies,
             TypeFamilies,
