Checking in all of the Environment + Website changes

--- a/turbinado.cabal
+++ b/turbinado.cabal
@@ -10,9 +10,8 @@ Build-Type:          Simple
 
 Executable server
   Main-is:             Turbinado/Server.hs
-  Build-Depends:       base, bytestring, containers, directory, filepath, harp, hslogger, hsx, HTTP, mtl, network, old-locale, old-time, parsec, plugins, pretty, regex-compat, time
-  Hs-Source-Dirs:      . , config
-  ghc-options: -F -pgmFtrhsx -O 
+  Build-Depends:       base, bytestring, containers, directory, filepath, harp, HDBC, HDBC-postgresql, hslogger, hsx, HTTP, mtl, network, old-locale, old-time, pandoc, parsec, plugins, pretty, regex-compat, time
+  ghc-options: -F -pgmFtrhsx -O
   Extensions: MultiParamTypeClasses,
             FunctionalDependencies,
             TypeFamilies,
