Updating to match turbinado-website

--- a/Config/App.hs.sample
+++ b/Config/App.hs.sample
@@ -1,9 +1,5 @@
 module Config.App (
-  applicationPath,
-  applicationHost,
-  AppEnvironment (..),
-  newAppEnvironment,
-  databaseConnection,
+  useLowerCasePaths,
   Connection,
   customSetupFilters,
   customPreFilters,
@@ -16,28 +12,34 @@ import System.Log.Logger
 -- Your favorite HDBC driver
 import Database.HDBC.PostgreSQL
 
+import Turbinado.Controller.Monad
+import Turbinado.Environment.Types
+import Turbinado.Environment.Session.CookieSession
+
 ----------------------------------------------------------------
 -- Environment settings
 ----------------------------------------------------------------
-applicationPath = ""
-applicationHost = "localhost:8080"
 
-data AppEnvironment = AppEnvironment
-newAppEnvironment = AppEnvironment
+-- | Determines whether the server uses URLs of the form FooBar/BimBam or foo_bar/bim_bam.
+-- The Controllers and Views must still be named FooBar.hs and BimBam.hs.
+useLowerCasePaths = True
 
 ----------------------------------------------------------------
--- Database connection
+-- Session settings
 ----------------------------------------------------------------
-databaseConnection :: Maybe (IO Connection)
--- databaseConnection = Nothing
-databaseConnection = Just $ connectPostgreSQL "host=localhost dbname=turbinado user=turbinado password=turbinado"
+sessionOpts = [ ("cookie-name", "turb-sess")
+              , ("cipher-key",  "super secret phrase")
+              ]
 
 ----------------------------------------------------------------
 -- RequestHandler Filter List additions
 ----------------------------------------------------------------
+customSetupFilters :: [Controller ()]
 customSetupFilters  = []
-customPreFilters  = []
-customPostFilters = []
+customPreFilters   :: [Controller ()]
+customPreFilters    = [retrieveSession sessionOpts]
+customPostFilters  :: [Controller ()]
+customPostFilters   = [persistSession  sessionOpts]
 
 
 ----------------------------------------------------------------
